# ollama-model-evaluator

./: .gitignore  LICENSE  Makefile  README.md  start.bat  stop.bat
backend/: README.md  pyproject.toml
backend/scripts/: regen_schemas.py
backend/src/ollama_evaluator/: __init__.py  cli.py  compare.py  config.py  events.py  models.py
backend/src/ollama_evaluator/api/: __init__.py  app.py  errors.py  events_ws.py  rest.py  (+1 more)
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  conftest.py  test_cli_exit_codes.py  test_happy_path_lifecycle.py  test_hf_field_map_invalid.py  test_openapi_validity.py  test_remote_mode_preflight_abort.py  test_signal_shutdown.py
backend/tests/property/: __init__.py  conftest.py  generators.py  test_property_10_tokens_per_second.py  test_property_11_optional_performance_fields.py  test_property_12_builtin_metric_correctness.py  test_property_13_judge_normalisation.py  test_property_14_metric_error_isolation.py  test_property_15_repetition_aggregates.py  test_property_16_run_report_completeness.py  test_property_17_markdown_report_contents.py  test_property_18_run_report_roundtrip.py  test_property_19_comparison_intersection.py  test_property_1_suite_roundtrip.py  test_property_20_cli_exit_code.py  test_property_21_retry_limit.py  test_property_22_error_summary_completeness.py  test_property_23_history_persistence.py  test_property_24_terminal_ordering.py  test_property_25_unique_run_ids.py  test_property_26_history_filter.py  test_property_27_history_delete.py  test_property_28_history_corrupted.py  test_property_29_404_envelope.py  test_property_2_suite_validation.py  test_property_30_400_field.py  test_property_31_event_bookends.py  test_property_32_test_case_bijection.py  test_property_33_progress_cadence.py  test_property_34_multi_subscriber.py  test_property_3_suite_discovery.py  test_property_42_adapter_valid_suites.py  test_property_43_local_remote_equivalence.py  test_property_44_hf_field_map.py  test_property_4_tag_filtering.py  test_property_5_missing_model_preflight.py  test_property_6_execution_count.py  test_property_7_generation_params.py  test_property_8_concurrency_bound.py  test_property_9_scheduler_failure_isolation.py
backend/tests/unit/: _fakes.py  conftest.py  test_api_lazy_store_lifespan.py  test_api_static_ui.py  test_config.py  test_events.py  test_history_store.py  test_metrics_base.py  test_metrics_builtin.py  test_ollama_client.py  test_ollama_types.py  test_run_report_models.py  test_runner_aggregate.py  test_runner_run_state.py  test_runner_scheduler.py  test_shared_schemas_regen.py  test_suite_loader.py  test_suite_models.py  test_suite_writer.py
(+156 files in other folders)
