[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-evaluator"
version = "0.1.0"
description = "Local evaluation harness for Ollama-hosted LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ollama Model Evaluator Contributors" }]
keywords = ["ollama", "llm", "evaluation", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "httpx>=0.27",
    "ruamel.yaml>=0.18",
    "aiosqlite>=0.19",
    "typer>=0.12",
    "jsonschema>=4.21",
    "datasets>=2.18",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
ollama-evaluator = "ollama_evaluator.cli:app"

[project.urls]
Homepage = "https://example.invalid/ollama-model-evaluator"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ollama_evaluator*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "property: property-based tests (Hypothesis). Use to mark slow, generative tests.",
    "integration: integration tests that exercise multiple components or external fixtures.",
]

[tool.coverage.run]
branch = true
source = ["ollama_evaluator"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["datasets.*", "ruamel.*", "aiosqlite.*", "jsonschema.*"]
ignore_missing_imports = true
